# metaFitch

./: .gitignore  README.md  get_num_descendants.py  metafitch.py  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  requirements.txt
src/metafitch/: cli.py  get_num_descendants.py  metafitch.py
