[metadata]
name = metafitch
version = 0.0.6
author = Theo Sanderson
author_email = theo@theo.io
description = "Metadata ancestral state reconstruction by Fitch's method"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theosanderson/chronumental
project_urls =
    Bug Tracker = https://github.com/theosanderson/chronumental/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    alive-progress
    pandas
    treeswift
    xopen


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    metafitch = metafitch:cli.main